syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";
package net.example.grpc;

message PaymentRequest {
    string firstName = 1;
    string lastName = 2;
    string cardNumber = 3;
    BigDecimal amount = 4;
    google.protobuf.Timestamp timestamp = 5;
}

message PaymentResponse {
    enum Result {
        SUCCESS = 0;
        FAILURE = 1;
    }
    Result result = 1;
    string message = 2;
}

message BigInteger {
    bytes value = 1;
}

message BigDecimal {
    int32 scale = 1;
    BigInteger int_val = 2;
}

service PaymentService {
    rpc createPayment(PaymentRequest) returns (PaymentResponse);
}
